# fastapi-jwt-middleware

./: README.md  pyproject.toml
fastapi_jwt_middleware/: jwt_auth.py
tests/: test_jwt_auth.py
tests/_certs/: test.cer  test.key
